--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "surge": "^0.21.3",
+    "yargs-parser": "^18.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
